--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ langchain-community = "^0.3.20"
 langchain-anthropic = "^0.3.10"
 langchain-google-genai = "^2.1.2"
 chromadb = "^1.0.3"
+fastmcp = "^2.2.9"
+mcp = {extras = ["cli"], version = "^1.7.1"}
+datasets = "^3.5.1"
